sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  return getValeur
         ^AlgBubbleSort1:3: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  return getValeur
         ^AlgBubbleSort1:3: warning: enclosing method bubbleSort has result type Unit: return value discarded
  return getValeur
  ^